--- a/consumer/package.json
+++ b/consumer/package.json
@@ -34,9 +34,10 @@
     ]
   },
   "devDependencies": {
-    "jest": "^24.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1"
+    "@testing-library/user-event": "^7.2.1",
+    "jest": "^24.9.0",
+    "nock": "^11.7.2"
   }
 }
