--- a/consumer/.eslintrc.json
+++ b/consumer/.eslintrc.json
@@ -6,7 +6,8 @@
   },
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
