--- a/provider/.eslintrc.json
+++ b/provider/.eslintrc.json
@@ -1,8 +1,9 @@
 {
     "env": {
-        "browser": true,
         "commonjs": true,
-        "es6": true
+        "es6": true,
+        "node": true,
+        "jest": true
     },
     "extends": "eslint:recommended",
     "globals": {
