removed the extra scripts

--- a/consumer/package.json
+++ b/consumer/package.json
@@ -16,9 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test",
-    "eject": "react-scripts eject",
-    "test:pact": "CI=true react-scripts test pact.spec.js",
-    "posttest:pact": "node publish.pact.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
