--- a/provider/package.json
+++ b/provider/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "test": "npx jest"
+    "test": "npx jest",
+    "test:pact": "npx jest --testMatch \"**/*.pact.test.js\""
   },
   "dependencies": {
     "cors": "^2.8.5",
