--- a/consumer/package.json
+++ b/consumer/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router": "latest",
+    "react-router": "3.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "spectre.css": "^0.5.8",
