--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm start --prefix consumer"
   },
   "dependencies": {
+    "@pact-foundation/pact": "^9.11.1",
     "concurrently": "^5.0.2"
   }
 }
