--- a/provider/package.json
+++ b/provider/package.json
@@ -9,6 +9,7 @@
     "test:pact": "npx jest --testTimeout=30000 --testMatch \"**/*.pact.test.js\""
   },
   "dependencies": {
+    "@pact-foundation/pact": "^9.11.1",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
