--- a/provider/package.json
+++ b/provider/package.json
@@ -8,6 +8,7 @@
     "test": "npx jest"
   },
   "dependencies": {
+    "@pact-foundation/pact": "^9.11.1",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
