--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,11 +13,11 @@ services:
       POSTGRES_DB: postgres
 
   broker_app:
-    image: dius/pact-broker
+    image: pactfoundation/pact-broker
     links:
       - postgres
     ports:
-      - 8000:80
+      - 8000:9292
     environment:
       PACT_BROKER_BASIC_AUTH_USERNAME: pact_workshop
       PACT_BROKER_BASIC_AUTH_PASSWORD: pact_workshop
