chore: set PACT_BROKER_DATABASE_CONNECT_MAX_RETRIES in docker compose file to ensure app can connect to database properly

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,3 +25,4 @@ services:
       PACT_BROKER_DATABASE_PASSWORD: password
       PACT_BROKER_DATABASE_HOST: postgres
       PACT_BROKER_DATABASE_NAME: postgres
+      PACT_BROKER_DATABASE_CONNECT_MAX_RETRIES: "10"
