chore: rename service to pact-broker in docker compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: postgres
 
-  broker_app:
+  pact-broker:
     image: pactfoundation/pact-broker
     links:
       - postgres
