--- a/consumer/package.json
+++ b/consumer/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.1",
+    "axios": "^0.25.0",
     "prop-types": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^5.0.0",
     "spectre.css": "^0.5.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "CI=true react-scripts test",
+    "test": "cross-env CI=true react-scripts test",
     "eject": "react-scripts eject",
-    "test:pact": "CI=true react-scripts test --testTimeout=30000 pact.spec.js"
+    "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,12 +36,13 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "^9.11.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.1.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.8.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
