--- a/consumer/package.json
+++ b/consumer/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.1",
-    "prop-types": "latest",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-router": "5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
-    "spectre.css": "^0.5.8"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "spectre.css": "^0.5.8",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@pact-foundation/pact": "^10.0.0-beta.62",
+    "nock": "^11.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
