chore: update to latest pact

--- a/provider/package.json
+++ b/provider/package.json
@@ -8,13 +8,13 @@
     "test": "npx jest"
   },
   "dependencies": {
-    "@pact-foundation/pact": "^10.0.0-beta.61",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "@pact-foundation/pact": "^10.0.0-beta.62"
   },
   "license": "ISC"
 }
