--- a/consumer/package.json
+++ b/consumer/package.json
@@ -12,18 +12,18 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^10.0.0-beta.62",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@pact-foundation/pact": "^10.0.0-beta.62",
-    "nock": "^11.7.2"
+    "nock": "^11.7.2",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "test:pact": "CI=true react-scripts test --testTimeout=30000 pact.spec.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
