chore: update readme for step

--- a/consumer/package.json
+++ b/consumer/package.json
@@ -12,17 +12,19 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^10.0.0-beta.62",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@pact-foundation/pact": "^10.0.0-beta.62",
-    "nock": "^11.7.2"
+    "nock": "^11.7.2",
+    "rimraf": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test",
     "eject": "react-scripts eject",
+    "pretest:pact": "rimraf pacts/*.json",
     "test:pact": "CI=true react-scripts test --testTimeout=30000 pact.spec.js",
     "pact:publish": "pact-broker publish ./pacts --consumer-app-version=\"$(npx @pact-foundation/absolute-version)\" --auto-detect-version-properties --broker-base-url=http://localhost:8000 --broker-username pact_workshop --broker-password pact_workshop"
   },
