--- a/provider/package.json
+++ b/provider/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "jest": "^24.9.0",
-    "@pact-foundation/pact": "^10.0.0-beta.62"
+    "@pact-foundation/pact": "^10.0.0"
   },
   "license": "ISC"
 }
