--- a/consumer/package.json
+++ b/consumer/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "absolute-version": "^1.0.1",
     "nock": "^11.7.2",
     "rimraf": "^3.0.2"
   },
@@ -26,7 +27,7 @@
     "eject": "react-scripts eject",
     "pretest:pact": "rimraf pacts/*.json",
     "test:pact": "CI=true react-scripts test --testTimeout=30000 pact.spec.js",
-    "pact:publish": "pact-broker publish ./pacts --consumer-app-version=\"$(npx @pact-foundation/absolute-version)\" --auto-detect-version-properties --broker-base-url=http://localhost:8000 --broker-username pact_workshop --broker-password pact_workshop"
+    "pact:publish": "pact-broker publish ./pacts --consumer-app-version=\"$(./node_modules/.bin/absolute-version-from-git-tag)\" --auto-detect-version-properties --broker-base-url=http://localhost:8000 --broker-username pact_workshop --broker-password pact_workshop"
   },
   "eslintConfig": {
     "extends": "react-app"
