--- a/consumer/package.json
+++ b/consumer/package.json
@@ -35,7 +35,12 @@
     ]
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^10.1.1",
     "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "nock": "^11.7.2",
+    "rimraf": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
     "babel-eslint": "^10.0.3",
