--- a/step2/provider/package.json
+++ b/step2/provider/package.json
@@ -5,16 +5,16 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "test": "npx jest"
+    "test": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^10.0.0-beta.62",
-    "eslint": "^6.8.0",
-    "jest": "^24.9.0"
+    "@pact-foundation/pact": "^12.1.0",
+    "eslint": "^8.50.0",
+    "jest": "^29.7.0"
   },
   "license": "ISC"
 }
