--- a/step2/provider/package.json
+++ b/step2/provider/package.json
@@ -8,13 +8,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "cors": "2.8.5",
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^12.1.0",
-    "eslint": "^8.50.0",
-    "jest": "^29.7.0"
+    "@pact-foundation/pact": "12.1.0",
+    "eslint": "8.50.0",
+    "jest": "29.7.0"
   },
   "license": "ISC"
 }
