--- a/step7/consumer/package.json
+++ b/step7/consumer/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
-    "spectre.css": "^0.5.8",
-    "web-vitals": "^2.1.4"
+    "spectre.css": "0.5.9",
+    "web-vitals": "3.4.0"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^12.1.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "nock": "^13.3.3",
-    "rimraf": "^5.0.1",
- "cross-env": "^7.0.3"
+    "@pact-foundation/pact": "12.1.0",
+    "@testing-library/jest-dom": "6.1.3",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.5.1",
+    "nock": "13.3.3",
+    "rimraf": "5.0.1",
+    "cross-env": "7.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretest:pact": "rimraf pacts/*.json",
-    "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js"    
+    "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js"
   },
   "eslintConfig": {
     "extends": [
