--- a/step1/consumer/package.json
+++ b/step1/consumer/package.json
@@ -12,18 +12,19 @@
     "web-vitals": "3.4.0"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "12.1.0",
-    "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
     "nock": "13.3.3",
     "rimraf": "5.0.4",
-    "cross-env": "7.0.3"
+    "cross-env": "7.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "jest": "29.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test",
+    "test:unit": "cross-env CI=true react-scripts test api.spec.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
