--- a/step2/provider/package.json
+++ b/step2/provider/package.json
@@ -4,17 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "jest"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "12.1.0",
-    "eslint": "8.50.0",
-    "jest": "29.7.0"
+    "@pact-foundation/pact": "12.1.0"
   },
   "license": "ISC"
 }
