--- a/step4/consumer/package.json
+++ b/step4/consumer/package.json
@@ -13,12 +13,13 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "12.1.0",
-    "@testing-library/jest-dom": "6.1.3",
+    
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.5.1",
     "nock": "13.3.3",
     "rimraf": "5.0.4",
-    "cross-env": "7.0.3"
+    "cross-env": "7.0.3",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,7 +28,7 @@
     "eject": "react-scripts eject",
     "pretest:pact": "rimraf pacts/*.json",
     "test:pact": "cross-env CI=true react-scripts test --testTimeout=30000 pact.spec.js",
-    "test:unit": "cross-env CI=true react-scripts test api.spec.js"
+        "test:unit": "cross-env CI=true react-scripts test api.spec.js"
   },
   "eslintConfig": {
     "extends": [
