--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,3 +28,5 @@ services:
       PACT_BROKER_DATABASE_NAME: postgres
       PACT_BROKER_DATABASE_CONNECT_MAX_RETRIES: "10"
       PACT_BROKER_PUBLIC_HEARTBEAT: true
+      PACT_BROKER_WEBHOOK_SCHEME_WHITELIST: http
+      PACT_BROKER_WEBHOOK_HOST_WHITELIST: localhost
