switch step12/step13

--- a/step12/broker-webhook/package.json
+++ b/step12/broker-webhook/package.json
@@ -5,7 +5,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node server.js"
+      "start": "node server.js",
+      "create-webhook": "./create_webhook.sh"
     },
     "author": "",
     "license": "ISC",
