--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,4 +29,4 @@ services:
       PACT_BROKER_DATABASE_CONNECT_MAX_RETRIES: "10"
       PACT_BROKER_PUBLIC_HEARTBEAT: true
       PACT_BROKER_WEBHOOK_SCHEME_WHITELIST: http
-      PACT_BROKER_WEBHOOK_HOST_WHITELIST: localhost
+      PACT_BROKER_WEBHOOK_HOST_WHITELIST: host.docker.internal
