--- a/step12/package.json
+++ b/step12/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "concurrently \"npm i --prefix consumer\" \"npm i --prefix provider\"",
     "start": "concurrently \"npm start --prefix consumer\" \"npm start --prefix provider\"",
+    "start:broker-webhook": "concurrently \"npm start --prefix broker-webhook\"",
     "lint": "concurrently \"cd consumer/ && npx eslint .\" \"cd provider/ && npx eslint .\""
   },
   "dependencies": {
